update styling, fix overflow bug

--- a/06_blocks/after_06-blocks/style.css
+++ b/06_blocks/after_06-blocks/style.css
@@ -24,6 +24,9 @@ a{
     text-decoration: none;
     color: inherit;
 }
+img {
+    max-width: 100%;
+}
 
 /* --- variables */
 :root {
